new workshop page, style and content updates

--- a/src/app/data/project.json
+++ b/src/app/data/project.json
@@ -10,5 +10,15 @@
     "keywords": "Prudential, design system, Dylan Hyun, Hyun, design, development, UX, UI, portfolio",
     "name": "Evolutuion DS | Dylan Hyun Design",
     "title": "Evolutuion DS | Dylan Hyun Design"
+  },
+  "migration": {
+    "keywords": "Prudential, Deloitte, design system, Dylan Hyun, Hyun, design, development, UX, UI, portfolio",
+    "name": "Site Migration | Dylan Hyun Design",
+    "title": "Site Migration | Dylan Hyun Design"
+  },
+  "workshop": {
+    "keywords": "Prudential, design system, Dylan Hyun, Hyun, design, development, UX, UI, portfolio",
+    "name": "Workshops | Dylan Hyun Design",
+    "title": "Workshops | Dylan Hyun Design"
   }
 }
